N°8392 - Fix poor contrast in autocompletes when using darkmoon

--- a/datamodels/2.x/combodo-backoffice-darkmoon-theme/scss/scss-variables.scss
+++ b/datamodels/2.x/combodo-backoffice-darkmoon-theme/scss/scss-variables.scss
@@ -175,6 +175,7 @@ $ibo-input-select-wrapper--after--color: $ibo-color-secondary-300;
 $ibo-input-select--action-button--color: $ibo-input-select-wrapper--after--color;
 $ibo-input-select-selectize--item--active--text-color: $ibo-color-grey-100;
 $ibo-input-select-selectize--item--active--background-color: $ibo-color-grey-500;
+$ibo-input-select--autocomplete-item-image--background-color: $ibo-color-grey-800;
 $ibo-vendors-selectize-input--color: $ibo-body-text-color;
 $ibo-vendors-selectize-input--background-color: $ibo-input--background-color;
 $ibo-vendors-selectize--input--border-color: $ibo-input--border-color;
